--- a/src/index.html
+++ b/src/index.html
@@ -70,14 +70,14 @@
   <title>Hyperlink</title>
   <meta name="title" content="Hyperlink - Software Engineer">
   <meta name="description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="Zapeli u 1998. godini? Otkrijte digitalni potencijal vašeg poslovanja uz Hyperlink Software Development.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://hyperlink.hr/">
   <meta property="og:title" content="Hyperlink - Software Engineer">
   <meta property="og:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="Zapeli u 1998. godini? Otkrijte digitalni potencijal vašeg poslovanja uz Hyperlink Software Development.">
 
   <!-- Twitter -->
 
@@ -92,9 +92,9 @@
   <meta name="twitter:title" content="Hyperlink - Software Engineer">
 
   <meta property="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="Zapeli u 1998. godini? Otkrijte digitalni potencijal vašeg poslovanja uz Hyperlink Software Development.">
   <meta name="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+    content="Zapeli u 1998. godini? Otkrijte digitalni potencijal vašeg poslovanja uz Hyperlink Software Development.">
 
   <meta property="twitter:image" content="https://hyperlink.hr/images/preview-new.jpg">
   <meta name="twitter:image" content="https://hyperlink.hr/images/preview-new.jpg">
